fix huge font in landscape on iPhone

--- a/templates/portfolio/static/style.css
+++ b/templates/portfolio/static/style.css
@@ -5,6 +5,7 @@ body {
     color: rgb(10, 10, 10);
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
+    -webkit-text-size-adjust: 100%;
 }
 
 ::selection {
